--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shen blog",
+  "name": "shen-blog",
   "version": "1.0.0",
   "description": "simple blog build using reactjs",
   "keywords": [
